--- a/inventory_project/requirements.txt
+++ b/inventory_project/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
 dj-database-url==2.2.0
 Django==5.1
+django-cors-headers==4.4.0
+gunicorn==23.0.0
 mysqlclient==2.2.4
 packaging==24.1
 psycopg2==2.9.9
